# stocks-streaming

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml  README.md  todo.md
client/src/: errors.rs  main.rs  worker.rs
server/: Cargo.toml  README.md
server/src/: errors.rs  generator.rs  lib.rs  main.rs  processor.rs  types.rs  utils.rs
