[workspace]
resolver = "3"
members = ["client","server"]

[workspace.dependencies]
bincode = {version = "1.3"}
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
rand = {version = "0.9.0"}
chrono = {version = "0.4.0"}
log = "0.4.29"
env_logger = "0.11.8"
parking_lot = "0.12.5"