[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {workspace = true}
serde = {workspace = true, features = ["derive"]}
rand = {workspace = true}
chrono = {workspace = true}
thiserror = "2"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4", features = ["derive"] }
log.workspace = true
env_logger.workspace = true
